Rutas actualizadas para copmpartir mediante QR

--- a/santiago_papeleria_frontend/src/app/layouts/public/public.html
+++ b/santiago_papeleria_frontend/src/app/layouts/public/public.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="pt-40">
+<div class="pt-[105px] md:pt-40">
     <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
