--- a/santiago_papeleria_frontend/src/app/pages/home/components/featured-categories/featured-categories.html
+++ b/santiago_papeleria_frontend/src/app/pages/home/components/featured-categories/featured-categories.html
@@ -2,7 +2,7 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="text-center mb-16">
       <h2 class="text-4xl md:text-5xl font-bold text-[#104D73] mb-6">
-        Explora Nuestras <span class="text-[#F2CB07]">Categorías</span>
+        Explora Nuestras <span class="text-amber-700">Categorías</span>
       </h2>
     </div>
 
