--- a/santiago_papeleria_frontend/src/app/pages/home/home.html
+++ b/santiago_papeleria_frontend/src/app/pages/home/home.html
@@ -1,4 +1,5 @@
 <main>
+  <h1 class="sr-only">Santiago Papelería - Inicio</h1>
   <app-hero-section></app-hero-section>
   <app-featured-categories></app-featured-categories>
   <app-featured-products></app-featured-products>
