--- a/santiago_papeleria_frontend/src/app/shared/header/header.component.html
+++ b/santiago_papeleria_frontend/src/app/shared/header/header.component.html
@@ -16,9 +16,9 @@
             <span class="hamburger-line"></span>
           </button>
 
-          <a routerLink="/" class="logo" aria-label="Santiago Papelería">
+          <a routerLink="/" class="logo" aria-label="Ir a Inicio - Santiago Papelería">
             <div class="logo-container">
-              <img src="favicon.ico" alt="Santiago Papelería" class="logo-image" loading="eager">
+              <img src="favicon.ico" alt="" class="logo-image" loading="eager" aria-hidden="true">
               <div class="logo-text">
                 <span class="logo-title">SANTIAGO</span>
                 <span class="logo-subtitle">PAPELERÍA</span>
