--- a/santiago_papeleria_frontend/src/app/pages/home/components/newsletter-section/newsletter-section.html
+++ b/santiago_papeleria_frontend/src/app/pages/home/components/newsletter-section/newsletter-section.html
@@ -14,7 +14,8 @@
       <!-- Campo email con FONDO BLANCO -->
       <div class="flex items-center bg-white border border-[#F2CB07] rounded-full px-4 py-2 w-64">
         <input type="email" [(ngModel)]="email" name="email" placeholder="nombre@email.com"
-          class="w-full bg-transparent text-gray-800 placeholder-gray-500 focus:outline-none" required>
+          aria-label="Correo electrónico para suscripción al boletín"
+          class="w-full bg-transparent text-gray-800 placeholder-gray-600 focus:outline-none" required>
         <i class="ri-mail-line text-[#104D73] ml-3"></i>
       </div>
 
